# calendar-smith

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  Makefile  README.rst  pyproject.toml
docs/: CHANGELOG.md
docs/source/: api.rst  calendar_smith.rst  cli.rst  conf.py  development.rst  index.rst  installation.rst  python-api.rst  quickstart.rst  recipes.rst
src/calendar_smith/: __init__.py  cli.py  core.py  time.py  utils.py
tests/: test_calendar.py  test_core.py  test_time.py  test_utils.py
