[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calendar-smith"
version = "0.2.1"
description = "Lightweight fiscal and ISO calendar utilities."
readme = "README.rst"
authors = [{ name = "Eiichi YAMAMOTO", email = "info@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
keywords = ["calendar", "fiscal-year", "iso-weeks", "date-parsing", "csv-utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yeiichi/calendar-smith"
Repository = "https://github.com/yeiichi/calendar-smith.git"
"Bug Tracker" = "https://github.com/yeiichi/calendar-smith/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",  # Optional: for checking test coverage
]

[project.scripts]
calendar-smith-csv = "calendar_smith.cli:process_csv"
calendar-smith-solve = "calendar_smith.cli:solve_weeks"
calendar-smith-nth = "calendar_smith.cli:determine_nth_week"
calendar-smith-windows = "calendar_smith.cli:generate_windows"
