[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[project]
name = "calendar-smith"
version = "1.1.0"
description = "Lightweight fiscal and ISO calendar utilities."
readme = "README.rst"
authors = [{ name = "Eiichi YAMAMOTO", email = "info@yeiichi.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.3",
]
keywords = ["calendar", "fiscal-year", "iso-weeks", "date-parsing", "csv-utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yeiichi/calendar-smith"
Repository = "https://github.com/yeiichi/calendar-smith.git"
"Bug Tracker" = "https://github.com/yeiichi/calendar-smith/issues"
Documentation = "https://calendar-smith.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0", # Optional: for checking test coverage
    "sphinx>=7.0",
    "furo",
    "myst-parser",
]

[project.scripts]
calendar-smith = "calendar_smith.cli:main"
calendar-smith-csv = "calendar_smith.cli:process_csv"
calendar-smith-solve = "calendar_smith.cli:solve_weeks"
calendar-smith-nth = "calendar_smith.cli:determine_nth_week"
calendar-smith-week-span = "calendar_smith.cli:solve_week_span"
calendar-smith-windows = "calendar_smith.cli:generate_windows"
calendar-smith-tz = "calendar_smith.cli:convert_timezone"
calendar-smith-fiscal-year = "calendar_smith.cli:fiscal_year"

[tool.semantic_release]
version_variables = ["src/calendar_smith/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
changelog_file = "CHANGELOG.md"
branch = "main"
build_command = "uv build"
